Bug 463989 - Remote RAW image previews don't work because of missing file extension in thumbnail temp file
Summary: Remote RAW image previews don't work because of missing file extension in thu...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.101.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-08 04:07 UTC by Andrew Gunnerson
Modified: 2024-04-30 10:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Gunnerson 2023-01-08 04:07:25 UTC
SUMMARY

In Dolphin, when browsing a directory containing RAW image files (eg. Canon's .cr2), previews work for local files, but not remote files. I believe I've tracked down the reason:

On the Dolphin side, when it runs the PreviewJob, it takes this code path for remote files: https://invent.kde.org/frameworks/kio/-/blob/v5.101.0/src/widgets/previewjob.cpp#L742. This creates a file called /tmp/dolphin.XXXXXX, which is passed to the thumbnailer.

On the kioslave/thumbnail.so side, RAWCreator::create() is called as expected (https://invent.kde.org/graphics/kdegraphics-thumbnailers/-/blob/v22.12.0/raw/rawcreator.cpp#L47), which then calls https://invent.kde.org/graphics/libkdcraw/-/blob/v22.12.0/src/kdcraw.cpp#L87. KDcraw::loadEmbeddedPreview() returns false because of the `!rawFilesExt.toUpper().contains(ext)` condition. libkdcraw requires the filename to have a known file extension.

Off the top of my head, it seems like there are a couple ways to solve this:

1. Change libkdcraw to not depend on the file extension (not sure how feasible this is).

2. Change kio so that the temporary file it creates has the original file extension.

STEPS TO REPRODUCE

1. In Dolphin, change the settings for the max file limit for remote thumbnails.
2. Navigate to a remote folder containing RAW images.

OBSERVED RESULT

There are no thumbnails.

EXPECTED RESULT

Thumbnails should be shown.

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Fedora 37
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101.0
Qt Version: 5.15.7

ADDITIONAL INFORMATION

(Included above)
Comment 1 Bug Janitor Service 2023-01-08 04:43:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1103
Comment 2 Andrew Gunnerson 2023-01-08 04:44:27 UTC
In case approach #2 is acceptable, I've created an MR to implement that here: https://invent.kde.org/frameworks/kio/-/merge_requests/1103
Comment 3 Méven Car 2024-04-30 10:15:25 UTC
Git commit 5e0b6cbf1b9ef5c1e181caa2726a5591ff0d5fde by Méven Car, on behalf of Andrew Gunnerson.
Committed on 30/04/2024 at 10:14.
Pushed by meven into branch 'master'.

PreviewJob: Add file extension to thumbnail temp files

Previously, when previewing remote files, kio would create a local copy
of the file using QTemporaryFile's default template. This would result
in filenames, like /tmp/dolphin.XXXXXX. However, some thumbnail plugins,
like kdegraphics-thumbnailers' libkdcraw thumbnailer, require the file
extension to be valid in order to produce a preview.

This commit updates the temp file's naming template to include the
original file extension (if any).

Signed-off-by: Andrew Gunnerson <accounts+kde@chiller3.com>

M  +8    -0    src/gui/previewjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/5e0b6cbf1b9ef5c1e181caa2726a5591ff0d5fde