PreviewJob: Add file extension to thumbnail temp files

Previously, when previewing remote files, kio would create a local copy
of the file using QTemporaryFile's default template. This would result
in filenames, like /tmp/dolphin.XXXXXX. However, some thumbnail plugins,
like kdegraphics-thumbnailers' libkdcraw thumbnailer, require the file
extension to be valid in order to produce a preview.

This commit updates the temp file's naming template to include the
original file extension (if any).

BUG: 463989

Signed-off-by: Andrew Gunnerson <accounts+kde@chiller3.com>